--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,13 @@
     transform: rotate(360deg);
   }
 }
+
+section {
+  color: #fff;
+  text-shadow: 3px 3px rgba(50, 50, 70, 0.5);
+  background-color: #66717E;
+  height: 50vh;
+}
+.navBg {
+  background-color: #7952b3;
+}
